--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -270,6 +270,7 @@
 /* Footer */
 .footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-top: 30px;
@@ -278,6 +279,15 @@
   font-weight: 500;
   background: #f3ecd899;
   opacity: 0.9;
+}
+
+.footer p {
+  margin: 0;
+  padding-top: 20px;
+}
+
+.footer__secondary__text {
+  font-size: 1rem;
 }
 
 .heart__icon {
@@ -300,6 +310,12 @@
 
   100% {
     transform: scale(0.9);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .venue__card {
+    padding: 20px;
   }
 }
 
